--- a/style.css
+++ b/style.css
@@ -1,73 +1,75 @@
-*, *::before, *::after {
-    box-sizing: border-box;
-    margin: 0;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
 }
 
 :root {
---White: hsl(0, 0%, 100%);
---Slate-300: hsl(212, 45%, 89%);
---Slate-500: hsl(216, 15%, 48%);
---Slate-900: hsl(218, 44%, 22%);
+  --White: hsl(0, 0%, 100%);
+  --Slate-300: hsl(212, 45%, 89%);
+  --Slate-500: hsl(216, 15%, 48%);
+  --Slate-900: hsl(218, 44%, 22%);
 }
 
 html {
-    background-color: var(--Slate-300);
+  background-color: var(--Slate-300);
 }
 
-
 body {
-    font-family: "Outfit", sans-serif;
-    text-align: center;
+  font-family: "Outfit", sans-serif;
+  text-align: center;
 }
 
 main {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 
-    border-radius: 10px;
-    margin-bottom: 24px;
+  border-radius: 10px;
+  margin-bottom: 24px;
+}
+
+h1,
+p {
+  padding-bottom: 16px;
 }
 
 p {
-    padding-inline: 1rem;
-    padding-bottom: 16px;
+  padding-inline: 1rem;
 }
 
 .heading-text {
-    font-size: 1.375rem;
-    font-weight: 700;
+  font-size: 1.375rem;
 
-    color: var(--Slate-900);
+  color: var(--Slate-900);
 }
 
 .paragraph-text {
-    font-size: 0.9375rem;
-    
-    color: var(--Slate-500);
+  font-size: 0.9375rem;
+
+  color: var(--Slate-500);
 }
 
-
 .container {
-    position: relative;
-    min-height: 100vh;
-    
+  position: relative;
+  min-height: 100vh;
 }
 
 .qr-card {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);  
-    
-    width: 90%;
-    max-width: 320px;
-    margin: 0 auto;
-    padding: 1em;
-    border-radius: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
-    background-color: var(--White);
-    box-shadow: 0px 8px 20px 1px hsl(216, 15%, 48%, 0.1)
+  width: 90%;
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 1em;
+  border-radius: 20px;
+
+  background-color: var(--White);
+  box-shadow: 0px 8px 20px 1px hsl(216, 15%, 48%, 0.1);
 }
