Chanage marginbottom to logical properties

--- a/style.css
+++ b/style.css
@@ -6,10 +6,13 @@
 }
 
 :root {
+
+  /* colors */
   --White: hsl(0, 0%, 100%);
   --Slate-300: hsl(212, 45%, 89%);
   --Slate-500: hsl(216, 15%, 48%);
   --Slate-900: hsl(218, 44%, 22%);
+
 }
 
 html {
@@ -28,8 +31,8 @@ main {
 img {
   max-width: 100%;
 
-  border-radius: 10px;
-  margin-bottom: 24px;
+  border-radius: 0.625rem;
+  margin-block-end: 1.5rem;
 }
 
 h1,
