--- a/style.css
+++ b/style.css
@@ -40,8 +40,14 @@ p {
   padding-bottom: 1rem;
 }
 
+h1 {
+  line-height: 120%;
+}
+
 p {
   padding-inline: 1rem;
+  margin-block-end: 0.5rem;
+  
 }
 
 .heading-text {
