--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ img {
 
 h1,
 p {
-  padding-bottom: 1rem;
+  padding-block-end: 1rem;
 }
 
 h1 {
@@ -47,7 +47,7 @@ h1 {
 p {
   padding-inline: 1rem;
   margin-block-end: 0.5rem;
-  
+  line-height: 140%;
 }
 
 .heading-text {
